@@ -2,24 +2,22 @@
 fixtures:
   repositories:
     auditd: https://github.com/simp/pupmod-simp-auditd
-    augeasproviders:
-      repo: https://github.com/simp/augeasproviders
-      branch: simp-master
     augeasproviders_core:
       repo: https://github.com/simp/augeasproviders_core
-      branch: simp-master
+      ref: '2.1.4'
     augeasproviders_grub:
       repo: https://github.com/simp/augeasproviders_grub
-      branch: simp-master
-    haveged:
-      repo: https://github.com/simp/puppet-haveged
-      branch: simp-master
+      ref: '3.0.0'
+    haveged: https://github.com/simp/puppet-haveged
     iptables: https://github.com/simp/pupmod-simp-iptables
     logrotate: https://github.com/simp/pupmod-simp-logrotate
     pki: https://github.com/simp/pupmod-simp-pki
     rsyslog: https://github.com/simp/pupmod-simp-rsyslog
     simpcat: https://github.com/simp/pupmod-simp-simpcat
     simplib: https://github.com/simp/pupmod-simp-simplib
-    stdlib: https://github.com/simp/puppetlabs-stdlib
+    stdlib:
+      repo: https://github.com/simp/puppetlabs-stdlib
+      ref: '4.19.0'
+
   symlinks:
     libreswan: "#{source_dir}"
