@@ -16,12 +16,14 @@ class libreswan::config::pki::nsspki(
     content => ": RSA \"${::fqdn}\"",
   }
 
+  $_fips = $::libreswan::fips or $facts['fips_enabled'] 
+
   libreswan::nss::init_db { "NSSDB ${::libreswan::ipsecdir}":
     dbdir       => $::libreswan::ipsecdir,
     password    => $::libreswan::nssdb_password,
     nsspassword => $::libreswan::nsspassword,
     token       => $::libreswan::token,
-    fips        => $::libreswan::fips,
+    fips        => $_fips,
     require     => File['/etc/ipsec.conf'],
   }
 
