@@ -1,10 +1,10 @@
 require 'spec_helper'
 describe 'libreswan::nss::init_db', :type => :define do
   context 'supported operating systems' do
-    on_supported_os.each do |os, facts|
+    on_supported_os.each do |os, os_facts|
       context "on #{os}" do
         let(:facts) do
-          facts
+          os_facts
         end
         let(:common_params) { { :dbdir => '/etc/ipsec.d', :nsspassword => '/etc/ipsec.d/nsspassword',
           :password => 'mypassword', :token => 'NSS Certificate DB' } }
@@ -15,7 +15,7 @@ describe 'libreswan::nss::init_db', :type => :define do
             '/sbin/ipsec initnss'
           end
         }
-        describe "destroy existing database" do
+        describe 'with destroy existing database' do
           let(:title  ){ 'IPSEC NSS DB' }
           let(:params) { common_params.merge({ :destroyexisting => true }) }
           it { is_expected.to contain_exec("init_nssdb #{params[:dbdir]}").with({
@@ -38,7 +38,7 @@ describe 'libreswan::nss::init_db', :type => :define do
           }
         end
 
-        describe "dont destroy existing database" do
+        describe "with don't destroy existing database" do
           let(:params) { common_params.merge( { :destroyexisting => false } ) }
           let(:title  ){ 'IPSEC NSS DB' }
           it { is_expected.to_not contain_exec("Remove NSS database #{params[:dbdir]}") }
@@ -49,7 +49,13 @@ describe 'libreswan::nss::init_db', :type => :define do
             })
           }
         end
-        describe "ipsec class with fips disabled" do
+
+        describe 'with fips=false and fips disabled' do
+          let(:facts) do
+            test_facts = os_facts
+            test_facts[:fips_enabled] = false
+            test_facts
+          end
           let(:params) { common_params.merge( { :fips => false, :token => 'NSS Certificate DB'} ) }
           let(:title ){ 'IPSEC NSS DB' }
           it { is_expected.to contain_exec("make sure nssdb not in fips mode #{params[:dbdir]}").with({
@@ -65,13 +71,18 @@ describe 'libreswan::nss::init_db', :type => :define do
             })
           }
           it { is_expected.to contain_exec("update token password #{params[:dbdir]}").with({
-            :command => "/usr/local/scripts/nss/update_nssdb_password.sh #{params[:dbdir]} #{params[:password]} none \"#{params[:token]}\"",
+            :command => "/usr/local/scripts/nss/update_nssdb_password.sh #{params[:dbdir]} \"#{params[:password]}\" \"none\" \"#{params[:token]}\"",
             :refreshonly => true
             })
           }
         end
 
-        describe "ipsec class with fips enabled" do
+        describe 'ipsec class with fips=true and fips disabled' do
+          let(:facts) do
+            test_facts = os_facts
+            test_facts[:fips_enabled] = false
+            test_facts
+          end
           let(:params) { common_params.merge( { :fips => true, :token => 'NSS FIPS 140-2 Certificate DB'} ) }
           let(:title  ){ 'IPSEC NSS DB' }
           it { is_expected.to contain_exec("nssdb in fips mode #{params[:dbdir]}").with({
@@ -87,8 +98,24 @@ describe 'libreswan::nss::init_db', :type => :define do
             })
           }
           it { is_expected.to contain_exec("update token password #{params[:dbdir]}").with({
-            :command => "/usr/local/scripts/nss/update_nssdb_password.sh #{params[:dbdir]} #{params[:password]} none \"#{params[:token]}\"",
+            :command => "/usr/local/scripts/nss/update_nssdb_password.sh #{params[:dbdir]} \"#{params[:password]}\" \"none\" \"#{params[:token]}\"",
             :refreshonly => true
+            })
+          }
+        end
+
+        describe 'ipsec class with fips=false and fips enabled' do
+          let(:facts) do
+            test_facts = os_facts
+            test_facts[:fips_enabled] = true
+            test_facts
+          end
+          let(:params) { common_params.merge( { :fips => false, :token => 'NSS FIPS 140-2 Certificate DB'} ) }
+          let(:title  ){ 'IPSEC NSS DB' }
+
+          it { is_expected.to contain_exec("nssdb in fips mode #{params[:dbdir]}").with({
+            :command => "modutil -dbdir sql:#{params[:dbdir]} -fips true",
+            :require => "Exec[init_nssdb #{params[:dbdir]}]"
             })
           }
         end
