@@ -1,3 +1,12 @@
+* Thu Nov 09 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 3.0.2-0
+- Bug fixes:
+  - Set up FIPS-compliant configuration, not just when
+    simp_options::fips is true, but also when the server is already
+    in FIPS mode.
+  - Insert token password into the NSS database after configuring
+    the NSS database for FIPS.
+- Updated the tests.
+
 * Thu Jul 06 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 3.0.1-0
 - Confine puppet version in metadata.json
 
